BUILD: make jlink work